# BCSE2_DSA_lab

./: README.md
assignment1/: compiled  compiled.c
assignment2/: assignment2.txt  compiled  compiled.c
assignment3/: q2  q2.c  q3.c
assignment3/q1/: app  header.h  main.c  q1_readme.md  queue.c  stack.c  user.c
assignment4/: Q5  assignment4.txt  q1  q1.c  q2  q2.c  q3  q3.c  q3.txt  q4a  q4a.c  q4b  q4b.c  q4c  q4c.c  q5.c
assignment5/q1/: file  file.txt  file2.txt  header.h  q1  q1.c  q2  q2.c  q3.c
assignment5/smarter/avl/: header.h  tree.c
assignment5/smarter/bst/: q1_q2_q3.c  random_ints.txt  tester  tester.c  tree.c
assignment5/solution/avl/: CMakeLists.txt  q7_q8_q9_q10.c
assignment5/solution/bst/: CMakeLists.txt  header.h  random_ints.txt
assignment5/solution/heap/: CMakeLists.txt  q4_q5_q6.c
assignment6/: CMakeLists.txt  bubble_sort.c  header.h  heap_sort.c  insertion_sort.c  main.c  merge_sort.c  quick_sort.c  selection_sort.c  sort_engine.c
assignment7/: q1  q1.c  tempCodeRunnerFile.c
assignment7/graph/: graph  graph.c
assignment7/q2_BinHeap/: user.c
assignment7/q2_LL/: header.h  heap.c  user.c
